Rework Java 16 Update from Grimreaper (#6528)
* [build] bump java from 14 to 16

* [codequal] convert Die and Dice to records

Make use of new java 16 language features to simplify code.

* Attempt to force correct URL for download

* Add comment to force rebuild for travis

* Make a spotbugs change to fire off a new GH Action Build on a PR

* complete move to Java 16

* Bring Checkstyle up to date

* Fix Checkstyle errors

* Clean up all PMD and Checkstyle warnings

* Java 16 fully working

* Add comment for excludes

Co-authored-by: Eitan Adler <lists@eitanadler.com>